# agent-garrison

./: .gitignore  AGENTS.md  BRIEF-DRILL-V1.md  CAPABILITIES.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  DECISIONS.md  EXPLORATION_REPORT_router_improver.md  FACULTIES.md  FITTINGS.md  FITTINGS_MIGRATION_PLAN.md  GOVERNANCE.md  LICENSE  METADATA.md  PHASE1_VERIFICATION.md  PHASE2_VERIFICATION.md  PHASE3_VERIFICATION.md  PHASE4_VERIFICATION.md  PHASE5_VERIFICATION.md  PHASE_5_ANALYSIS.md  PRIMITIVES.md  README.md  RUN_LOG.md  SCHEDULING_AUDIT.md  V1_DOD.md  WHATS-NEW.md  __verify-ui2.mjs  drill-mock.jsx  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.web-channel.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
.beads/: config.yaml  interactions.jsonl  metadata.json
.walkthrough/: config.json  notes.md  quarters-crud.storyboard.json  router-live.sh  show-build-routing.sh  show-routing-log.sh  show-taskline-routing.sh  storyboard-agentsdk-orchestrated.json  storyboard-agentsdk.json  storyboard-browser-viewport.json  storyboard-build-workflow.json  storyboard-chat-smoke.json  storyboard-composition-view.json  storyboard-improver.json  storyboard-muster-fittings.json  storyboard-muster-levels.json  storyboard-muster-orchestrator.json  storyboard-overview.json  storyboard-q2.json  storyboard-responsive-mobile.json  storyboard-router.json  (+11 more)
fittings/seed/google-calendar/: apm.yml  instructions.md  pyproject.toml
fittings/seed/google-calendar/scripts/: calendar-sync-wrapper.sh  calendar.py  setup.sh  verify.sh
(+2503 files in other folders)
