[project]
name = "garrison-google-calendar"
version = "0.1.0"
description = "Google Calendar OAuth + CLI for Agent Garrison."
requires-python = ">=3.10"
dependencies = [
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.130",
  "tzlocal>=5.2",
]

[tool.uv]
package = false
